2007-11-15  Andy Wingo  <wingo@pobox.com>

	* tests.mk (GUILE): 
	* generate-docs.mk (GUILE): Use guile-gnome-0, because we want
	(gnome-0) to have been loaded.

	* scripts/review-api: New script, generates a minimal texinfo file
	that one can use to review wrapped API.

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.95 ==

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* tests.mk: New file, common makefile snippets for running API
	regression suites.

	* generate-docs.mk (check-coverage): New target, checks the
	coverage of the documentation.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.94 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-09-24  Andy Wingo  <wingo@pobox.com>

	* generate-docs.mk: Rework to deal with new gtk-doc.scm interface.

2007-09-07  Andy Wingo  <wingo@pobox.com>

	* generate-docs.mk: New common makefile snippet for generated
	docs.

2007-08-25  Andy Wingo  <wingo@pobox.com>

	* common.mk (.c.doc): Update so that making .doc files works;
	still needs some filtering though.

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.93 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* scripts/maint/upload-to-ftp.gnu.org: Actually upload the file if
	we are given a URL.

	* == Released guile-gnome-platform version 2.15.92 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* h2def.py: Add new options --type-re, to specify a regular
	expression to transform a type name into a gtype-id macro. See
	defs/gnome/defs/Makefile.am for a use example.

2007-05-20  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh: Fix some aesthetics if a package is not going to
	be built.

	* PACKAGES (guile-gnome-platform): Add cairo to
	guile-gnome-platform.

2007-05-13  Andy Wingo  <wingo@pobox.com>

	* h2def.py (get_type_pat): In method detection, require that the