@@ -38,6 +38,9 @@ for pkg in $ALL_PKGS; do
     else
       GUILE_LOAD_PATH=$this_dir/$pkg:$GUILE_LOAD_PATH
     fi
+    if [ -d $this_dir/$pkg/bin ]; then
+      PATH=$this_dir/$pkg/bin:$PATH
+    fi
     if [ -f $src_dir/$pkg/shlib-dirs.ac ]; then
       for dir in `cat $src_dir/$pkg/shlib-dirs.ac`; do
 	LTDL_LIBRARY_PATH=$this_dir/$pkg/$dir:$LTDL_LIBRARY_PATH
@@ -49,6 +52,6 @@ for pkg in $ALL_PKGS; do
   fi
 done
 
-export GUILE_LOAD_PATH LTDL_LIBRARY_PATH PKG_CONFIG_PATH
+export GUILE_LOAD_PATH LTDL_LIBRARY_PATH PKG_CONFIG_PATH PATH
 
 exec "$@"
